edited topbar color, bug fixes, social alignment, company name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #106eea;
+  background: #0a3369;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -198,10 +198,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .scrolled-offset {
   margin-top: 70px;
-}
-
-#main {  
-  text-align: center;
 }
 
 .choose-head {
